<resources>
    <string name="app_name">SOTA Chaser</string>
    <string name="title_activity_maps">Summit Map</string>
    <string name="association">Association</string>
    <string name="region">Region</string>

    <string name="title_analytics">Analytics Opt-in</string>
    <string name="title_anonymous_usage">Anonymous usage statistics</string>
    <string name="title_crash_reports">Automatically submit crash reports</string>
    <string name="title_changelog">Changelog</string>
    <string name="changelog_text">Updates in this release:\n
\n
<b>Version 0.9 Alpha</b>\n
• Fixed crashes on network errors\n
• Added option to sort summits on name, altitude, distance, and other parameters\n
• Added option to filter summits on zon-zero activation count\n
...
• Prevent user interface from hanging while loading data\n
• Preserve last location when returning to app\n
\n
<b>Version 0.1 Alpha</b>\n
• First demo release of SOTA Summit Mapping</string>

    <string name="preference_asked_for_consent">asked_for_consent</string>
    <string name="preference_enable_analytics">enable_analytics</string>
    <string name="preference_enable_crash_reports">enable_crash_reports</string>
    <string name="preference_changelog">changelog</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Map</string>
    <string name="title_dashboard">Summit List</string>
...
